# pai-repo

./: .cspell.json  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE_MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
assets/unicode/: ID_Continue.rs  ID_Start.rs
crates/fs-loader/: Cargo.toml
crates/fs-loader/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/benches/: setup.rs
crates/lexer/src/: lib.rs  macros.rs
crates/lexer/src/scanner/: ASCII.md  entry.rs  ident.rs  keyword.rs  line.rs  lit.rs  mod.rs  punc.rs  unit.rs  whitespace.rs
crates/lexer/src/scanner/helpers/: block_comment.rs  char.rs  decode_char.rs  digit.rs  escape.rs  escape_unicode.rs  hashbang.rs  ident_part.rs  is.rs  line.rs  mod.rs  number.rs  string.rs  whitespace.rs
crates/lexer/src/token/: kind.rs  mod.rs
crates/lexer/tests/: scanner.rs
crates/lexer/tests/fixtures/: demo.ts
crates/pai-ast/: Cargo.toml
crates/pai-fs/: Cargo.toml
crates/pai-fs/src/: lib.rs
crates/pai-lexer/: Cargo.toml
crates/pai-lexer/src/: lib.rs  macros.rs
crates/pai-lexer/src/scanner/: comment.rs  entry.rs  lit.rs  mod.rs  punctuator.rs  unit.rs
crates/pai-lexer/src/scanner/helpers/: block_comment.rs  char.rs  hashbang.rs  ident_part.rs  is.rs  line.rs  mod.rs  number.rs  string.rs  whitespace.rs
crates/pai-lexer/tests/: scanner.rs
crates/pai-lexer/tests/fixtures/: demo.ts
crates/pai-parser/src/: lib.rs
crates/pai-shared/scripts/: unicode_builder.rs
crates/pai-shared/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  tokenize.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/scripts/: mod.rs  (+1 more)
(+8 files in other folders)
